# glasstrace

./: .gitignore  LICENSE  README.md  pyproject.toml  test_report.html
.github/workflows/: ci.yml
docs/: _config.yml  index.md
examples/: basic.py
glasstrace/: __init__.py  cli.py  hooks.py  html_report.py  profiler.py  report.py
scripts/: benchmark_plot.py
tests/: test_smoke.py
