[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glasstrace"
version = "0.4.0"
description = "Per-layer latency and memory profiler for transformer inference."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Manu", email = "therealmanujawahar@gmail.com" }]
keywords = ["pytorch", "transformers", "profiler", "inference", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "tabulate>=0.9",
]

[project.scripts]
glasstrace = "glasstrace.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/manu-j3400/glasstrace"
Repository = "https://github.com/manu-j3400/glasstrace"
Issues = "https://github.com/manu-j3400/glasstrace/issues"

[tool.hatch.build.targets.wheel]
packages = ["glasstrace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
per-file-ignores = {"glasstrace/html_report.py" = ["E501"]}
